# memory-anchor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_TWIN_MODE.md  docker-compose.yml  ma  pyproject.toml
.ai/: NORTH_STAR.md  PLAN.md  test-mapping.yaml
.ai/operations/: README.md  index.yaml  sop-memory-sync.md  sop-qdrant-startup.md  sop-test-quality.md  workflow-session-start.md
.prompts/: observation.md
.swarm/: memory.db-shm  memory.db-wal
backend/: __init__.py  config.py  main.py  mcp_memory.py  mcp_memory_lite.py
backend/api/: __init__.py  auth.py  constitution.py  graph.py  memory.py  notes.py  pending.py  projects.py  search.py
backend/cli/: __init__.py  budget_cmd.py  cloud_cmd.py  conflicts_cmd.py  doctor_cmd.py  drift_cmd.py  init_cmd.py  north_star_cmd.py  review_cmd.py  serve_cmd.py  status_cmd.py  web_cmd.py
backend/core/: __init__.py  active_context.py  conflict_detector.py  context_budget.py  memory_kernel.py  safety_filter.py  temporal_query.py
backend/hooks/: __init__.py  base.py  checkpoint_hook.py  gating_hook.py  post_tool_hook.py  registry.py  stop_hook.py  test_tampering_hook.py
backend/models/: __init__.py  checklist.py  constitution_change.py  event_log.py  graph.py  note.py
backend/sdk/: __init__.py  memory_client.py
backend/services/: __init__.py  checklist_service.py  cloud_storage.py  cloud_sync.py  constitution.py  data_encryptor.py  drift.py  embedding.py  graph_service.py  llm_provider.py  memory.py  memory_backend.py  memory_refiner.py  notes_service.py  pending_memory.py  search.py  test_mapping.py
backend/services/backends/: __init__.py  mcp_memory_service_backend.py  qdrant_backend.py
backend/services/review/: __init__.py  base.py  memory_reviewer.py  performance_reviewer.py  quality_reviewer.py  report_generator.py  (+2 more)
backend/state/: __init__.py  manager.py  models.py
backend/tests/: __init__.py  conftest.py  test_active_context.py  test_checklist_service.py  test_cloud_sync.py  test_concurrent_approval.py  test_config_error_handling.py  test_config_thresholds.py  test_conflict_detector.py  test_constitution_approval.py  test_context_budget.py  test_event_log.py  test_gating_hook.py  test_graph.py  test_hook_framework.py  test_mcp_layer_compatibility.py  test_mcp_server.py  test_memory_api.py  test_memory_kernel_thread_safety.py  test_memory_refiner.py  test_memory_traceability.py  test_memory_write_search_loop.py  test_notes.py  test_pending_approval.py  test_post_tool_hook.py  test_qdrant_strict_mode.py  test_retrieval_quality.py  test_review.py  test_safety_filter.py  test_search.py  test_session_isolation.py  test_state_manager.py  test_stop_hook.py  test_temporal_query.py  test_test_mapping.py  test_test_tampering_hook.py  test_ttl_expiration.py  test_twin_mode_integration.py
docs/: AI_MEMORY_PROMPT_TEMPLATE.md  BUGFIX_SPRINT_2025-12-18.md  CODA_LEARNING_AND_ENHANCEMENT.md  DAY7_RETRIEVAL_TEST_REPORT.md  DEPLOYMENT_CHECKLIST.md  MEMORY_ISOLATION_QUICK_REF.md  MEMORY_STRATEGY.md  PROJECT_MEMORY_TEMPLATE.md  SKILL_SPEC.md  SPEC.md  TWIN_MODE_ARCHITECTURE.md  USAGE_DOD.md
docs/plans/: 2025-12-27-memory-traceability-design.md  2025-12-27-memory-web-ui-design.md  2025-12-27-timeline-visualization-design.md  2025-12-27-viewer-edit-design.md
examples/ai-development/: README.md  constitution.yaml
examples/knowledge-base/: README.md  constitution.yaml
examples/patient-care/: README.md  constitution.yaml
frontend/caregiver/: CHECKLIST_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/viewer/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: check_memory_isolation.sh  checkpoint.py  daily_backup.py  harvest_memories.py  init_all_projects.sh  init_constitution.py  mcp_wrapper.sh  memory_anchor_cli.py  test_memory_injection.py  update_project_rules.py  verify_and_record.py
tests/: test_l4_mcp.py  test_l4_operations.py
(+61 files in other folders)
