[project]
name = "memory-anchor"
version = "0.1.0"
description = "Memory Anchor - AI 记忆系统，为 AI 提供持久化跨会话记忆"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "baobao", email = "baobao@example.com" },
]
keywords = ["ai", "memory", "mcp", "claude", "qdrant", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "qdrant-client>=1.12.0",
    "edge-tts>=6.1.0",
    "python-multipart>=0.0.9",
    "fastembed>=0.7.4",
    "mcp>=1.23.3",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/baobao/memory-anchor"
Documentation = "https://github.com/baobao/memory-anchor#readme"
Repository = "https://github.com/baobao/memory-anchor.git"
Issues = "https://github.com/baobao/memory-anchor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
memory-anchor = "backend.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
